--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=tecnifyproyecto
-spring.datasource.url=jdbc:mysql://localhost:3306/tecnify?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+
+# Configuración de la base de datos en Railway
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de JPA e Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+# Configuración de seguridad (ajústalo según necesidad)
 spring.security.user.name=admin
 spring.security.user.password=admin
