--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,14 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de JPA e Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # Configuración de seguridad (ajústalo según necesidad)
 spring.security.user.name=admin
 spring.security.user.password=admin
+
+logging.level.root=INFO
+logging.level.org.springframework=DEBUG
+logging.level.com.tuapp=DEBUG
+
